<resources>
    <string name="app_name">Shadow Isles</string>
    <string name="create_lobby">Create Lobby</string>
    <string name="no_lobby">Currently not in a Lobby</string>
    <string name="game_mode">Game Mode:</string>
    <string name="current_lobby">Current Lobby:</string>
    <string name="ip_address_hint">IP Address of PC</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="apply">Apply</string>
    <string name="start_queue">Start Queue</string>
    <string name="queue_state">Queue State:</string>
    <string name="stop_queue">Stop Queue</string>
    <string name="cancel_lobby">Cancel Lobby</string>
    <string name="custom_game">Custom Game</string>
    <string name="players">Players:</string>
    <string name="lobby_size">%d / %d</string>
    <string name="ip_address">IP Address…</string>
    <string name="invitations">Invitations:</string>
</resources>